--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp==3.8.4
 fastapi==0.92.0
+openai==0.27.0
 pydantic==1.10.5
-python-dotenv==0.21.1
-revChatGPT==2.3.4
+python-dotenv==1.0.0
+revChatGPT==3.0.5
 uvicorn==0.20.0
